--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
           <div class="nav-footer">
             <div class="nav-footer-img">
               <p>
-                <img src="https://i.postimg.cc/xjJPd6f5/Temitope-3.jpg" alt="" class="p-img">
+                <img src="me.JPG" alt="" class="p-img">
               </p>
             </div>
             <div class="nav-footer-profile">
               <div class="nav-footer-item">
                 <div>
-                  <p id="nav-footer-item-p1">Jide</p>
+                  <p id="nav-footer-item-p1">oluwa_t.o.m.i.s.i.n</p>
                 </div>
                 <div class="nav-footer-btn">
                   <div class="btn btn1"></div>
@@ -131,7 +131,7 @@
                 </div>
               </div>
               <div>
-                <p id="nav-footer-item-p2">@iamyelex</p>
+                <p id="nav-footer-item-p2">@hardex_tommy</p>
               </div>
             </div>
           </div>
